Updated the repository URL

--- a/NuciXNA.Primitives/NuciXNA.Primitives.csproj
+++ b/NuciXNA.Primitives/NuciXNA.Primitives.csproj
@@ -8,7 +8,7 @@
     <Description>Primitives for NuciXNA</Description>
     <Authors>Horațiu Mlendea</Authors>
     <Copyright>Copyright 2021 © Horațiu Mlendea</Copyright>
-    <RepositoryUrl>https://github.com/hmlendea/nucixna</RepositoryUrl>
+    <RepositoryUrl>https://github.com/hmlendea/nucixna.primitives</RepositoryUrl>
     <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>XNA MonoGame</PackageTags>
