dotnet: Upgraded to .NET 8.0

--- a/NuciXNA.Primitives/NuciXNA.Primitives.csproj
+++ b/NuciXNA.Primitives/NuciXNA.Primitives.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>NuciXNA.Primitives</RootNamespace>
-    <Version>1.4.0</Version>
+    <Version>2.0.0</Version>
     <Description>Primitives for NuciXNA</Description>
     <Authors>Horațiu Mlendea</Authors>
-    <Copyright>Copyright 2021 © Horațiu Mlendea</Copyright>
+    <Copyright>Copyright 2024 © Horațiu Mlendea</Copyright>
     <RepositoryUrl>https://github.com/hmlendea/nucixna.primitives</RepositoryUrl>
     <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
